vlib/v/checker/tests/mod_name_duplicate_param_err.out
vlib/v/checker/tests/mod_name_duplicate_param_err.vv:3:8: error: duplicate of a module name `foo`
    1 | module foo
    2 | 
    3 | fn bar(foo string) {
      |        ~~~
    4 |     println(foo)
    5 | }
vlib/v/checker/tests/mod_name_duplicate_param_err.vv:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module foo
      | ^
    2 | 
    3 | fn bar(foo string) {
