vlib/v/checker/tests/mod_name_duplicate_param_err.vv
module foo

fn bar(foo string) {
	println(foo)
}
